The keymeaning property added to the words records. The Words Review table repetitions column, when is generated, it takes already repeated words. The algorithms have been added to select the most matching words in the Test answers. The words in the Test game are initialy sorted. The pronouns are visible in the clue Test game before the answer is chosen. The clue selection bug has been fixed in the Test game.

--- a/src/modules/games/test/test.scss
+++ b/src/modules/games/test/test.scss
@@ -453,14 +453,12 @@
     .content .meanings {
       [data-pronoun] {
         color: #748682;
-        display: none;
         font-size: 15px;
         font-style: italic;
       }
 
       [data-explanation] {
         color: #039089;
-        display: none;
         font-size: 14px;
         font-style: italic;
         margin: 0px 4px;
@@ -468,7 +466,20 @@
     }
   }
 
-  .container.solved .section.clue,
+  .section.answers {
+
+    .content .word,
+    .content .meanings {
+      [data-pronoun] {
+        display: none;
+      }
+
+      [data-explanation] {
+        display: none;
+      }
+    }
+  }
+
   .container.solved .section.answers {
 
     .content .word,
